--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,15 +53,14 @@ main {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 15px;
   width: 100%;
-  max-width: 1200px;
   align-self: center;
 }
 
 .gallery__item {
   position: relative;
   overflow: hidden;
-  border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 220px;
 }
 
 .gallery__image {
